update controller,migration and model
