# routes/web.php
@@ -16,3 +16,15 @@
 $router->get('/', function () use ($router) {
     return $router->app->version();
 });
+
+$router->post('/auth/register',  'AuthController@register');
+$router->post('/auth/login',     'AuthController@login');
+
+$router->group(['middleware' => 'auth.jwt'], function () use ($router) {
+    $router->get('/tasks',        'TaskController@index');      // ?status=pending|done
+    $router->post('/tasks',       'TaskController@store');
+    $router->patch('/tasks/{id}', 'TaskController@update');
+    $router->delete('/tasks/{id}','TaskController@destroy');
+
+    $router->get('/quote',        'QuoteController@daily');
+});
